--- a/src/main/webapp/resources/template/layout.xhtml
+++ b/src/main/webapp/resources/template/layout.xhtml
@@ -26,9 +26,9 @@
 						<p:menubar>
 							<p:submenu label="Cadastros" icon="fa fa-file-o">
 								<p:menuitem value="Setor" url="/setor.xhtml" />
-								<p:menuitem value="Conta" url="#" />
+								<p:menuitem value="Conta" url="/conta.xhtml" />
 								<p:menuitem value="Fornecedor" url="#" />
-								<p:menuitem value="Usuário" url="#" />
+								<p:menuitem value="Usuário" url="/usuario.xhtml" />
 								<p:separator />
 								<p:menuitem value="Logout" url="#" />
 							</p:submenu>
