Redesenho da página do cadastro de setores

--- a/src/main/webapp/resources/css/estilo.css
+++ b/src/main/webapp/resources/css/estilo.css
@@ -37,3 +37,20 @@ h1 {
 	height: 200px;
 	text-align: center;
 }
+
+.painel{
+	width: 100%;
+}
+
+.rotulo {
+	width: 10%;
+	text-align: right;
+}
+
+.campo {
+	width: 35%;
+}
+
+.mensagem {
+	width: 55%;
+}
