Diálogo de confirmação para exclusão de setores

--- a/src/main/webapp/resources/template/layout.xhtml
+++ b/src/main/webapp/resources/template/layout.xhtml
@@ -66,13 +66,15 @@
 
 	
 			<nav>
-				<h4>
-					<ui:insert name="navegacao">
-						<p:breadCrumb>
-						    <p:menuitem value="Dashboard" url="/" />
-						</p:breadCrumb>			
-					</ui:insert>
-				</h4>
+				<h:form>
+					<h4>
+						<ui:insert name="navegacao">
+							<p:breadCrumb>
+							    <p:menuitem value="Dashboard" url="/" />
+							</p:breadCrumb>			
+						</ui:insert>
+					</h4>
+				</h:form>
 			</nav>
 			
 			
