Tela de pesquisa do cadastro de fornecedores

--- a/src/main/webapp/resources/template/layout.xhtml
+++ b/src/main/webapp/resources/template/layout.xhtml
@@ -27,10 +27,12 @@
 							<p:submenu label="Cadastros" icon="fa fa-file-o">
 								<p:menuitem value="Setor" url="/setor.xhtml" />
 								<p:menuitem value="Conta" url="/conta.xhtml" />
-								<p:menuitem value="Fornecedor" url="#" />
+								<p:menuitem value="Fornecedor" url="/fornecedor.xhtml"/>
 								<p:menuitem value="Usuário" url="/usuario.xhtml" />
 								<p:separator />
-								<p:menuitem value="Logout" url="#" />
+								<p:menuitem value="Alterar Senha" url="#" disabled="true"/>
+								<p:separator />
+								<p:menuitem value="Logout" url="#" disabled="true" />
 							</p:submenu>
 				
 							<p:submenu label="Operações" icon="fa fa-list-ul">
