Pesquisa do Contas a Pagar (Tela de abertura)

--- a/src/main/webapp/resources/template/layout.xhtml
+++ b/src/main/webapp/resources/template/layout.xhtml
@@ -36,7 +36,7 @@
 							</p:submenu>
 				
 							<p:submenu label="Operações" icon="fa fa-list-ul">
-								<p:menuitem value="Contas a Pagar" url="#" icon="fa fa-square-o" />
+								<p:menuitem value="Contas a Pagar"  url="/pagamento.xhtml" icon="fa fa-square-o" />
 								<p:menuitem value="Baixa (Pgto)" url="#" icon="fa fa-check-square-o" />
 							</p:submenu>
 				
