Uso do template AceAdmin nas páginas xhtml

--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -18,9 +18,9 @@
 	<link rel="icon" href='#{resource["img/AppLogo.png"]}' />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300"/>
 
-	<!-- bootstrap & fontawesome -->
+	<!-- bootstrap & fontawesome 
+	<h:outputStylesheet library="aceAdmin" name="font-awesome/4.5.0/css/font-awesome.min.css"/> -->
 	<h:outputStylesheet library="aceAdmin" name="css/bootstrap.min.css"/>
-	<h:outputStylesheet library="aceAdmin" name="css/font-awesome.min.css"/>
 
 	<!-- page specific plugin styles -->
 
@@ -45,9 +45,9 @@
 
 <h:body class="no-skin">
 
-	<div id="navbar" class="navbar navbar-default          ace-save-state">
+	<div id="navbar" class="navbar navbar-default ace-save-state">
 		<div class="navbar-container ace-save-state" id="navbar-container">
-			<button type="button" class="navbar-toggle menu-toggler pull-left" id="menu-toggler" data-target="#sidebar">
+ 			<button type="button" class="navbar-toggle menu-toggler pull-left" id="menu-toggler" data-target="#sidebar">
 				<span class="sr-only">Toggle sidebar</span>
 	
 				<span class="icon-bar"></span>
@@ -229,7 +229,7 @@
 								<ul class="dropdown-menu dropdown-navbar">
 									<li>
 										<a href="#" class="clearfix">
-											<img src='#{resources["aceAdmin/images/avatars/avatar.png"]}' class="msg-photo" alt="Alex's Avatar" />
+											<h:graphicImage library="aceAdmin" name="images/avatars/avatar.png" styleClass="msg-photo" alt="Alex's Avatar"/>
 											<span class="msg-body">
 												<span class="msg-title">
 													<span class="blue">Alex:</span>
@@ -246,7 +246,7 @@
 	
 									<li>
 										<a href="#" class="clearfix">
-											<img src='#{resources["aceAdmin/images/avatars/avatar3.png"]}' class="msg-photo" alt="Susan's Avatar" />
+											<h:graphicImage library="aceAdmin" name="images/avatars/avatar3.png" styleClass="msg-photo" alt="Susan's Avatar"/>
 											<span class="msg-body">
 												<span class="msg-title">
 													<span class="blue">Susan:</span>
@@ -263,7 +263,7 @@
 	
 									<li>
 										<a href="#" class="clearfix">
-											<img src='#{resources["aceAdmin/images/avatars/avatar4.png"]}' class="msg-photo" alt="Bob's Avatar" />
+											<h:graphicImage library="aceAdmin" name="images/avatars/avatar4.png" styleClass="msg-photo" alt="Bob's Avatar"/>
 											<span class="msg-body">
 												<span class="msg-title">
 													<span class="blue">Bob:</span>
@@ -280,7 +280,7 @@
 	
 									<li>
 										<a href="#" class="clearfix">
-											<img src='#{resources["aceAdmin/images/avatars/avatar2.png"]}' class="msg-photo" alt="Kate's Avatar" />
+											<h:graphicImage library="aceAdmin" name="images/avatars/avatar2.png" styleClass="msg-photo" alt="Kate's Avatar"/>
 											<span class="msg-body">
 												<span class="msg-title">
 													<span class="blue">Kate:</span>
@@ -297,7 +297,7 @@
 	
 									<li>
 										<a href="#" class="clearfix">
-											<img src='#{resources["aceAdmin/images/avatars/avatar5.png"]}' class="msg-photo" alt="Fred's Avatar" />
+											<h:graphicImage library="aceAdmin" name="images/avatars/avatar5.png" styleClass="msg-photo" alt="Fred's Avatar"/>
 											<span class="msg-body">
 												<span class="msg-title">
 													<span class="blue">Fred:</span>
@@ -325,7 +325,7 @@
 	
 					<li class="light-blue dropdown-modal">
 						<a data-toggle="dropdown" href="#" class="dropdown-toggle">
-							<img class="nav-user-photo" src='#{resources["aceAdmin/images/avatars/user.jpg"]}' alt="Jason's Photo" />
+							<h:graphicImage library="aceAdmin" name="images/avatars/user.jpg" styleClass="nav-user-photo" alt="Jason's Photo"/>
 							<span class="user-info">
 								<small>Welcome,</small>
 								Jason
@@ -416,204 +416,6 @@
 	
 				<li class="">
 					<a href="#" class="dropdown-toggle">
-						<i class="menu-icon fa fa-desktop"></i>
-						<span class="menu-text">
-							UI &amp; Elements
-						</span>
-	
-						<b class="arrow fa fa-angle-down"></b>
-					</a>
-	
-					<b class="arrow"></b>
-	
-					<ul class="submenu">
-						<li class="">
-							<a href="#" class="dropdown-toggle">
-								<i class="menu-icon fa fa-caret-right"></i>
-	
-								Layouts
-								<b class="arrow fa fa-angle-down"></b>
-							</a>
-	
-							<b class="arrow"></b>
-	
-							<ul class="submenu">
-								<li class="">
-									<a href="top-menu.html">
-										<i class="menu-icon fa fa-caret-right"></i>
-										Top Menu
-									</a>
-	
-									<b class="arrow"></b>
-								</li>
-	
-								<li class="">
-									<a href="two-menu-1.html">
-										<i class="menu-icon fa fa-caret-right"></i>
-										Two Menus 1
-									</a>
-	
-									<b class="arrow"></b>
-								</li>
-	
-								<li class="">
-									<a href="two-menu-2.html">
-										<i class="menu-icon fa fa-caret-right"></i>
-										Two Menus 2
-									</a>
-	
-									<b class="arrow"></b>
-								</li>
-	
-								<li class="">
-									<a href="mobile-menu-1.html">
-										<i class="menu-icon fa fa-caret-right"></i>
-										Default Mobile Menu
-									</a>
-	
-									<b class="arrow"></b>
-								</li>
-	
-								<li class="">
-									<a href="mobile-menu-2.html">
-										<i class="menu-icon fa fa-caret-right"></i>
-										Mobile Menu 2
-									</a>
-	
-									<b class="arrow"></b>
-								</li>
-	
-								<li class="">
-									<a href="mobile-menu-3.html">
-										<i class="menu-icon fa fa-caret-right"></i>
-										Mobile Menu 3
-									</a>
-	
-									<b class="arrow"></b>
-								</li>
-							</ul>
-						</li>
-	
-						<li class="">
-							<a href="typography.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Typography
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="elements.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Elements
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="buttons.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Buttons &amp; Icons
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="content-slider.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Content Sliders
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="treeview.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Treeview
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="jquery-ui.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								jQuery UI
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="nestable-list.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Nestable Lists
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="#" class="dropdown-toggle">
-								<i class="menu-icon fa fa-caret-right"></i>
-	
-								Three Level Menu
-								<b class="arrow fa fa-angle-down"></b>
-							</a>
-	
-							<b class="arrow"></b>
-	
-							<ul class="submenu">
-								<li class="">
-									<a href="#">
-										<i class="menu-icon fa fa-leaf green"></i>
-										Item #1
-									</a>
-	
-									<b class="arrow"></b>
-								</li>
-	
-								<li class="">
-									<a href="#" class="dropdown-toggle">
-										<i class="menu-icon fa fa-pencil orange"></i>
-	
-										4th level
-										<b class="arrow fa fa-angle-down"></b>
-									</a>
-	
-									<b class="arrow"></b>
-	
-									<ul class="submenu">
-										<li class="">
-											<a href="#">
-												<i class="menu-icon fa fa-plus purple"></i>
-												Add Product
-											</a>
-	
-											<b class="arrow"></b>
-										</li>
-	
-										<li class="">
-											<a href="#">
-												<i class="menu-icon fa fa-eye pink"></i>
-												View Products
-											</a>
-	
-											<b class="arrow"></b>
-										</li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-					</ul>
-				</li>
-	
-				<li class="">
-					<a href="#" class="dropdown-toggle">
 						<i class="menu-icon fa fa-list"></i>
 						<span class="menu-text"> Tables </span>
 	
@@ -672,32 +474,6 @@
 							<b class="arrow"></b>
 						</li>
 	
-						<li class="">
-							<a href="form-wizard.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Wizard &amp; Validation
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="wysiwyg.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Wysiwyg &amp; Markdown
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="dropzone.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Dropzone File Upload
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
 					</ul>
 				</li>
 	
@@ -726,162 +502,6 @@
 					<b class="arrow"></b>
 				</li>
 	
-				<li class="">
-					<a href="gallery.html">
-						<i class="menu-icon fa fa-picture-o"></i>
-						<span class="menu-text"> Gallery </span>
-					</a>
-	
-					<b class="arrow"></b>
-				</li>
-	
-				<li class="">
-					<a href="#" class="dropdown-toggle">
-						<i class="menu-icon fa fa-tag"></i>
-						<span class="menu-text"> More Pages </span>
-	
-						<b class="arrow fa fa-angle-down"></b>
-					</a>
-	
-					<b class="arrow"></b>
-	
-					<ul class="submenu">
-						<li class="">
-							<a href="profile.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								User Profile
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="inbox.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Inbox
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="pricing.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Pricing Tables
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="invoice.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Invoice
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="timeline.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Timeline
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="search.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Search Results
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="email.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Email Templates
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="login.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Login &amp; Register
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-					</ul>
-				</li>
-	
-				<li class="active open">
-					<a href="#" class="dropdown-toggle">
-						<i class="menu-icon fa fa-file-o"></i>
-	
-						<span class="menu-text">
-							Other Pages
-	
-							<span class="badge badge-primary">5</span>
-						</span>
-	
-						<b class="arrow fa fa-angle-down"></b>
-					</a>
-	
-					<b class="arrow"></b>
-	
-					<ul class="submenu">
-						<li class="">
-							<a href="faq.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								FAQ
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="error-404.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Error 404
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="error-500.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Error 500
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="">
-							<a href="grid.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Grid
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-	
-						<li class="active">
-							<a href="blank.html">
-								<i class="menu-icon fa fa-caret-right"></i>
-								Blank Page
-							</a>
-	
-							<b class="arrow"></b>
-						</li>
-					</ul>
-				</li>
 			</ul><!-- /.nav-list -->
 	
 			<div class="sidebar-toggle sidebar-collapse" id="sidebar-collapse">
@@ -931,8 +551,29 @@
 											<option data-skin="skin-3" value="#D0D0D0">#D0D0D0</option>
 										</select>
 									</div>
-									<span>Choose Skin</span>
+									<span> Preferência de Cor</span>
 								</div>
+
+
+
+								
+								<div class="ace-settings-item">
+									<div>
+										<label for="form-field-select-1">Estilo do Tema</label>
+										<select class="form-control" id="form-field-select-1">
+											<option value=""></option>
+											<option value="AL">Alabama</option>
+											<option value="AK">Alaska</option>
+											<option value="AZ">Arizona</option>
+											<option value="AR">Arkansas</option>
+											<option value="CA">California</option>
+											<option value="CO">Colorado</option>
+										</select>
+									</div>
+								</div>
+								
+								
+								
 	
 								<div class="ace-settings-item">
 									<input type="checkbox" class="ace ace-checkbox-2 ace-save-state" id="ace-settings-navbar" autocomplete="off" />
@@ -961,6 +602,7 @@
 										<b>.container</b>
 									</label>
 								</div>
+
 							</div><!-- /.pull-left -->
 	
 							<div class="pull-left width-50">
